A bit abour the area

--- a/intro-stream-processing.html
+++ b/intro-stream-processing.html
@@ -566,17 +566,48 @@ light.switch()</code></pre>
                         <img src="_images/streamprocessing-wallaroo.png" alt="Wallaroo  Logo" style="float:left;width:200px;margin:50px;" class="no-border">
                         <img src="_images/streamprocessing-beam.png" alt="Apache Beam Logo" style="float:left;width:200px;margin:50px;" class="no-border">
                     </section>
+				</section>
+
+				<section>
+					<section data-background="_images/area.jpg">
+						<h2>A Área</h2>
+					</section>
+
+					<section>
+						<img class="stretch" src="_images/baby-smile.jpg" alt="" />
+
+						<aside class="notes">
+							A área de stream processing é bem jovem (o conceito
+							em si começou a ser explorado a partir de 1999, com
+							um protótipo em 2002) e é uma área bem divertida de
+							se trabalhar.
+						</aside>
+					</section>
 
 					<section>
 						<img class="stretch" src="_images/broken-gif-Andy-Samberg.gif" alt="" />
+
+						<aside class="notes">
+							... entretanto, como qualquer coisa distribuída,
+							coisas tendem a explodir de forma inexplicável...
+						</aside>
 					</section>
 
 					<section>
 						<img class="stretch" src="_images/normal12.jpg" alt="" />
+
+						<aside class="notes">
+							... e algumas coisas normais não são tão normais...
+						</aside>
 					</section>
 
 					<section>
 						<img class="stretch" src="_images/zuul.jpg" alt="" />
+
+						<aside class="notes">
+							... e no fim tem-se uma coisa bonitinha que esconde
+							um monstro por trás.
+						</aside>
 					</section>
 
 					<section>
@@ -585,6 +616,34 @@ light.switch()</code></pre>
                         own computer unusable"
 
 						-- Leslie Lamport, 1987
+					</section>
+
+					<section>
+						<img class="stretch" src="_images/Java-logo.jpg" alt="" />
+
+						<aside class="notes">
+							É uma área dominada pelo Java, já que tudo explodiu
+							a partir do JMX...
+						</aside>
+					</section>
+
+					<section>
+						<img class="stretch" src="_images/python-logo.png" alt="" />
+
+						<aside class="notes">
+							... embora Python esteja sempre junto (todos
+							grandes frameworks tem bibliotecas de conexão com
+							Python)...
+						</aside>
+					</section>
+
+					<section>
+						<img class="stretch" src="_images/machine-learning.jpg" alt="" />
+
+						<aside class="">
+							... porque Python é imbatível em machine learning,
+							graças ao jupyter.
+						</aside>
 					</section>
                 </section>
 
