Removed references from old job

--- a/intro-stream-processing.html
+++ b/intro-stream-processing.html
@@ -70,9 +70,7 @@
             <div class="slides">
                 <section>
                     <section data-background="_images/streamprocessing.jpg" data-header>
-                        <h1 class="semi-opaque">
-                            Stream Processing
-                        </h1>
+                        <h1 class="semi-opaque">Stream Processing</h1>
                     </section>
                 </section>
 
@@ -83,7 +81,6 @@
                         <div>
                             <ul class="empty">
                                 <li>Júlio Biason</li>
-                                <li><img src="_images/azion-logo.png" alt="Azion logo" class='company-logo'>Azion Technologies</li>
                                 <li>@juliobiason</li>
 								<li>https://functional.cafe/@juliobiason</li>
                                 <li>julio.biason@gmail.com</li>
@@ -92,23 +89,23 @@
                         </div>
                     </section>
 
-                    <section>
-                        <img src="_images/start-a-fight.jpg" alt="Eu faço perguntas em reuniões que eu não sei nada e reunião explode; não é de propósito" class='stretch'/>
+<!--                     <section> -->
+<!--                         <img src="_images/start-a-fight.jpg" alt="Eu faço perguntas em reuniões que eu não sei nada e reunião explode; não é de propósito" class='stretch'/> -->
 
-                        <aside class="notes">
-                            Eu sou famoso (ou era) por entrar eu reuniões, fazer uma
-                            pergunta e a reunião explodir em discussões (úteis, diga-se
-                            de passagem). Mas eu não fazia isso de propósito.
-                        </aside>
-                    </section>
+<!--                         <aside class="notes"> -->
+<!--                             Eu sou famoso (ou era) por entrar eu reuniões, fazer uma -->
+<!--                             pergunta e a reunião explodir em discussões (úteis, diga-se -->
+<!--                             de passagem). Mas eu não fazia isso de propósito. -->
+<!--                         </aside> -->
+<!--                     </section> -->
 
-					<section>
-						<img src="_images/mini-hitler.jpg" alt="Me chamaram de Mini Hitler"/>
+<!-- 					<section> -->
+<!-- 						<img src="_images/mini-hitler.jpg" alt="Me chamaram de Mini Hitler"/> -->
 
-						<aside class="notes">
-							Para alguns, eu sou um mini-Hitler.
-						</aside>
-					</section>
+<!-- 						<aside class="notes"> -->
+<!-- 							Para alguns, eu sou um mini-Hitler. -->
+<!-- 						</aside> -->
+<!-- 					</section> -->
                 </section>
 
 				<section>
@@ -118,19 +115,17 @@
 						<li>Processamento distribuído</li>
 						<li>Batch Processing</li>
 						<li>Programação Funcional</li>
-						<li>Stream processing</li>
+						<li>Stream Processing</li>
 						<li>(Big Data)</li>
 					</ul>
 				</section>
 
 				<section>
 					<section>
-                        <h2>This is Azion</h2>
-						<img class="stretch" src="_images/streamprocessing-azion.png" alt="Lista de pontos de presença da Azion" />
+                        <h2>This is a CDN</h2>
+						<img class="stretch" src="_images/streamprocessing-aws.png" alt="Lista de pontos de presença da CDN da Amazon" />
 
 						<aside class="notes">
-							Esse é o mapa de Pontos de Presença da Azion. Em
-							alguns desses lugares, temos mais de um servidor.
 						</aside>
 					</section>
 
@@ -188,9 +183,9 @@
 					</section>
 
 					<section>
-						<h2>This is Azion</h2>
+						<h2>This is a CDN</h2>
 						
-						<p>Em média, a CDN atende 50.000 requisições/segundo.</p>
+						<p>A AWS tem um limite máximo de 100.000 requisições/segundo.</p>
 					</section>
 
 					<section>
@@ -215,7 +210,7 @@
 						<h2>CDN? Stream Processing?</h2>
 
 						<p>
-							Impossível guardar os 50.000 registros/segundo num
+							Impossível guardar os 100.000 registros/segundo num
 							banco de dados e fazer um SELECT pra ver o total.
 						</p>
 
@@ -649,9 +644,7 @@ light.switch()</code></pre>
 
                 <section data-background='_images/thats-all-folks.jpg'>
 					<h3 class="semi-opaque fragment">
-						Por falar nisso, estamos contratando :) </p>
-
-						<a href="http://jobs.azion.com">jobs.azion.com</a>
+						Perguntas?
 					</h3>
 				</section>
             </div>
