Clean up Intro Stream Processing

--- a/intro-stream-processing.html
+++ b/intro-stream-processing.html
@@ -88,28 +88,10 @@
                             </ul>
                         </div>
                     </section>
-
-<!--                     <section> -->
-<!--                         <img src="_images/start-a-fight.jpg" alt="Eu faço perguntas em reuniões que eu não sei nada e reunião explode; não é de propósito" class='stretch'/> -->
-
-<!--                         <aside class="notes"> -->
-<!--                             Eu sou famoso (ou era) por entrar eu reuniões, fazer uma -->
-<!--                             pergunta e a reunião explodir em discussões (úteis, diga-se -->
-<!--                             de passagem). Mas eu não fazia isso de propósito. -->
-<!--                         </aside> -->
-<!--                     </section> -->
-
-<!-- 					<section> -->
-<!-- 						<img src="_images/mini-hitler.jpg" alt="Me chamaram de Mini Hitler"/> -->
-
-<!-- 						<aside class="notes"> -->
-<!-- 							Para alguns, eu sou um mini-Hitler. -->
-<!-- 						</aside> -->
-<!-- 					</section> -->
                 </section>
 
 				<section>
-					<h2>O que eu vou falar:</h2>
+					<h2>Agenda:</h2>
 
 					<ul>
 						<li>Processamento distribuído</li>
