Trying to make every presentation look like

--- a/cleancodemeetup.html
+++ b/cleancodemeetup.html
@@ -14,7 +14,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
         <link rel="stylesheet" href="reveal.js/css/reveal.css">
-        <link rel="stylesheet" href="theme/azion.css" id="theme">
+        <link rel="stylesheet" href="reveal.js/css/theme/night.css" id="theme">
 
         <!-- Code syntax highlighting -->
         <link rel="stylesheet" href="reveal.js/lib/css/zenburn.css">
@@ -83,7 +83,6 @@
                         <div>
                             <ul class="empty">
                                 <li>Júlio Biason</li>
-                                <li>Azion Technologies<img src="_images/azion-logo.png" alt="Azion logo" class='company-logo'></li>
                                 <li>@juliobiason</li>
                                 <li>julio.biason@gmail.com</li>
                                 <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
