--- a/fugindo-com-python-2.html
+++ b/fugindo-com-python-2.html
@@ -14,7 +14,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
         <link rel="stylesheet" href="reveal.js/css/reveal.css">
-        <link rel="stylesheet" href="theme/azion.css" id="theme">
+        <link rel="stylesheet" href="reveal.js/css/theme/night.css" id="theme">
 
         <!-- Code syntax highlighting -->
         <link rel="stylesheet" href="reveal.js/lib/css/zenburn.css">
@@ -57,6 +57,16 @@
             img {
                 max-height: 90%;
             }
+
+			.semi-opaque {
+				background-color: rgba(0, 0, 0, 0.7);
+				color: #fff;
+				text-shadow: 2px 2px #000;
+			}
+
+			.reveal h1 {
+				font-size: 3em !important;
+			}
         </style>
     </head>
 
@@ -76,7 +86,6 @@
                         <div>
                             <ul class="empty">
                                 <li>Júlio Biason</li>
-                                <li>Azion Technologies<img src="_images/azion-logo.png" alt="Azion logo" class='company-logo'></li>
 								<li>@juliobiason</li>
 								<li>https://functional.cafe/@juliobiason</li>
                                 <li>julio.biason@gmail.com</li>
