Fixed style so my regex can pick the title
... and, thus, the presentation will appear in the global index.

--- a/cargo-cult.html
+++ b/cargo-cult.html
@@ -70,9 +70,7 @@
             <div class="slides">
                 <section>
                     <section data-background="_images/cargo-cult.jpg" data-header>
-                        <h1 class="semi-opaque">
-                            Cargo Cult
-                        </h1>
+                        <h1 class="semi-opaque">Cargo Cult</h1>
                     </section>
                 </section>
 
