--- a/cargo-cult.html
+++ b/cargo-cult.html
@@ -62,6 +62,10 @@
                 font-style: italic;
                 font-weight: bold;
             }
+
+			.semi-opaque {
+				background-color: rgba(0, 0, 0, 0.7);
+			}
         </style>
     </head>
 
