--- a/rust-legal.html
+++ b/rust-legal.html
@@ -156,6 +156,8 @@ fn main() {
 2
 2
 						</code></pre>
+
+						<p class="fragment">"Copy trait"</p>
 					</section>
 
 					<section>
@@ -327,6 +329,119 @@ file.write(b"Hello world")?;
 OK(())
                         </code></pre>
                     </section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Crazy stuff</h2>
+					</section>
+
+					<section>
+						<a href="https://medium.com/@shnatsel/how-rusts-standard-library-was-vulnerable-for-years-and-nobody-noticed-aebf0503c3d6">How Rust’s standard library was vulnerable for years and nobody noticed</a>
+					</section>
+
+					<section>
+						<a href="https://medium.com/@sgrif/no-the-problem-isnt-bad-coders-ed4347810270">No, the problem isn’t “bad coders”</a>
+					</section>
+
+					<section>
+						<img src="_images/rust-issues.png" alt="4.5k issues no Github">
+					</section>
+
+                    <section>
+                        <a href="https://rustup.rs/">rustup</a>
+
+                        <div class="fragment">
+                            <small>stable-x86_64-pc-windows-msvc</small>
+                        </div>
+
+                        <div class="fragment">
+                            <small>armv7-unknown-linux-gnueabihf</small>
+                        </div>
+
+                        <div class="fragment">
+                            <small>wasm32-unknown-unknown</small> <small class="fragment">(WebAssembly)</small>
+                        </div>
+                    </section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Bibliotecas</h2>
+					</section>
+
+					<section>
+						<h3>Rayon</h3>
+
+						<pre><code>
+fn sum_of_squares(input: &amp;[i32]) -&gt; i32 {
+    input.iter()
+         .map(|&amp;i| i * i)
+         .sum()
+}
+						</code></pre>
+					</section>
+
+					<section>
+						<h3>Rayon</h3>
+
+						<pre><code>
+fn sum_of_squares(input: &amp;[i32]) -&gt; i32 {
+    input.par_iter()
+         .map(|&amp;i| i * i)
+         .sum()
+}
+						</code></pre>
+					</section>
+
+                    <section>
+                        <h3>Log-Derive</h3>
+
+                        <pre><code>
+#[logfn(ok = "TRACE", err = "ERROR")]
+fn call_isan(num: &amp;str) -&gt; Result&lt;Success, Error&gt; {
+    if num.len() &gt;= 10 &amp;&amp; num.len() &lt;= 15 {
+        Ok(Success)
+    } else {
+        Err(Error)
+    }
+}
+                        </code></pre>
+                    </section>
+				</section>
+
+				<section>
+					<section>
+						<h2>E quem usa?</h2>
+					</section>
+
+					<section>
+						<h3>Magic Pocket</h3>
+
+						<p>Dropbox</p>
+
+						<p>Petabyte storage</p>
+					</section>
+
+					<section>
+						<h3>Servo</h3>
+
+						<p>Mozilla</p>
+
+						<p>Base do Firefox Quantum</p>
+					</section>
+
+					<section>
+						<h3>Azure</h3>
+
+						<p>Microsoft</p>
+
+						<p>Usado na parte de IoT do Azure</p>
+					</section>
+
+					<section>
+						<h3>Tor</h3>
+					</section>
 				</section>
 
                 <section data-background='_images/thats-all-folks.jpg'>
