Forgot about the GC

--- a/porque-rust.html
+++ b/porque-rust.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Por que você deveria aprender Rust</title>
+        <title>Porque você deveria aprender Rust</title>
 
         <meta name="description" content="Por que você deveria aprender Rust">
         <meta name="author" content="Julio Biason">
@@ -74,7 +74,7 @@
             <div class="slides">
                 <section>
                     <section data-background="_images/rust-ferris.png" data-header>
-                        <h1 class="semi-opaque">Por Que Rust</h1>
+                        <h1 class="semi-opaque">Porque Rust</h1>
                     </section>
                 </section>
 
@@ -436,6 +436,10 @@ presente.abrir()</code></pre>
 							(uma função que está rodando em outra thread).
 						</aside>
                     </section>
+
+					<section>
+						<h2>E GC?</h2>
+					</section>
 
                     <section>
                         <a href="https://swift.org/blog/swift-5-exclusivity/">Swift 5 Exclusivity Enforcement</a>
