Forgot to open a section

--- a/porque-rust.html
+++ b/porque-rust.html
@@ -156,6 +156,7 @@
 					</section>
 				</section>
 
+				<section>
                     <section>
                         <h2>Imutabilidade por Default</h2>
 
