Dont use fragment for the single image in the slide

--- a/porque-rust.html
+++ b/porque-rust.html
@@ -259,7 +259,7 @@ a = String::from("hello");
 					</section>
 
 					<section>
-                        <img src="_images/rust-memory.png" alt="" class="fragment stretch">
+                        <img src="_images/rust-memory.png" alt="" class="stretch">
 
 						<aside class="notes">
 							É mais ou menos isso que Rust "pensa" internamente
