Fixed the title detection

--- a/porque-rust.html
+++ b/porque-rust.html
@@ -74,7 +74,7 @@
             <div class="slides">
                 <section>
                     <section data-background="_images/rust-ferris.png" data-header>
-                        <h2 class="semi-opaque">Porque Rust</h2>
+                        <h2 class="semi-opaque">Porque Você Deveria Aprender Rust</h2>
                     </section>
                 </section>
 
