Fixed a few things in the stream presentation

--- a/intro-stream-processing.html
+++ b/intro-stream-processing.html
@@ -80,7 +80,7 @@
             <div class="slides">
                 <section>
                     <section data-background="_images/streamprocessing.jpg" data-header>
-                        <h1 class="semi-opaque">Stream Processing</h1>
+                        <h2 class="semi-opaque">Uma Não-Gentil Introdução ao Stream Processing</h2>
                     </section>
                 </section>
 
@@ -91,9 +91,8 @@
                         <div>
                             <ul class="empty">
                                 <li>Júlio Biason</li>
-                                <li>@juliobiason</li>
 								<li>https://functional.cafe/@juliobiason</li>
-                                <li>julio.biason@gmail.com</li>
+                                <li>julio.biason@pm.me</li>
                                 <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
                             </ul>
                         </div>
@@ -455,17 +454,17 @@ light.switch()</code></pre>
 
                     <section>
                         <ul>
-                            <li><code>map()</code></li>
-                            <li><code>reduce()</code></li>
-                            <li class="fragment"><code>fold()</code></li>
+                            <li><code>map</code></li>
+                            <li><code>reduce</code> <span class="fragment">(fold)</span></li>
+                            <li class="fragment"><code>filter</code></li>
                         </ul>
                     </section>
 
                     <section>
                         <ul>
                             <li><code>(map lambda iterator)</code></li>
-                            <li><code>(reduce lambda iterator)</code></li>
                             <li><code>(fold lambda iterator start)</code></li>
+                            <li><code>(filter lambda iterator start)</code></li>
                         </ul>
                     </section>
 
@@ -474,12 +473,12 @@ light.switch()</code></pre>
                             <li><code><strong>map</strong></code>: transforma cada um dos
                                 elementos do iterador através do função lambda
                                 em uma nova lista.</li>
-                            <li><code><strong>reduce</strong></code>: remove elementos do
-                                iterador que não sejam verdadeiros pelo lambda
-                                e produz uma nova lista. </li>
                             <li><code><strong>fold</strong></code>: converte todos os elementos
                                 da lista em um único valor, começando com um
                                 valor adicionar (por exemplo, <code>sum</code>).</li>
+                            <li><code><strong>filter</strong></code>: remove elementos do
+                                iterador que não sejam verdadeiros pelo lambda
+                                e produz uma nova lista. </li>
                         </ul>
                     </section>
 				</section>
@@ -543,7 +542,7 @@ light.switch()</code></pre>
 
 				<section>
 					<section data-background="_images/area.jpg">
-						<h2>A Área</h2>
+						<h2 class="semi-opaque">A Área</h2>
 					</section>
 
 					<section>
@@ -621,6 +620,15 @@ light.switch()</code></pre>
                 </section>
 
                 <section data-background='_images/thats-all-folks.jpg'>
+					<ul class="empty fragment semi-opaque">
+						<li>Júlio Biason</li>
+						<li>https://functional.cafe/@juliobiason</li>
+						<li>julio.biason@pm.me</li>
+						<li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
+					</ul>
+
+					<h3></h3>
+
 					<h3 class="semi-opaque fragment">
 						Perguntas?
 					</h3>
