Added a comic about being read ready

--- a/intro-stream-processing.html
+++ b/intro-stream-processing.html
@@ -195,6 +195,10 @@
 					</section>
 
 					<section>
+						<img class="stretch" src="_images/streamprocessing-read-ready.jpg" alt="">
+					</section>
+
+					<section>
 						<h2>Como resolver isso?</h2>
 
 						<p>Poderíamos simplesmente ir somando o total</p>
