Cleaned up the layout a bit

--- a/porque-como-opensource.html
+++ b/porque-como-opensource.html
@@ -48,6 +48,10 @@
 			li {
 				display: block;
 			}
+
+            .semi-opaque {
+                background-color: rgba(0, 0, 0, 0.7);
+            }
         </style>
     </head>
 
@@ -56,7 +60,7 @@
             <div class="slides">
                 <section>
                     <section data-background="_images/osi_keyhole_300X300_90ppi_0.png" data-header>
-                        <h1 class="semi-opaque">Por que e Como Participar de Projetos Open Source</h1>
+                        <h2 class="semi-opaque">Por que e Como Participar de Projetos Open Source</h2>
                     </section>
                 </section>
 
@@ -67,9 +71,8 @@
                         <div>
                             <ul class="empty">
                                 <li>Júlio Biason</li>
-                                <li>@juliobiason</li>
 								<li>https://functional.cafe/@juliobiason</li>
-                                <li>julio.biason@gmail.com</li>
+                                <li>julio.biason@pm.me</li>
                                 <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
                             </ul>
                         </div>
@@ -78,7 +81,7 @@
 
                 <section>
 					<section>
-						<h1>Motivação</h1>
+						<h2>Motivação</h2>
 
 						<aside class="notes">
 							O que me levou a fazer essa apresentação foi justamente a participação
@@ -96,7 +99,7 @@
 
 				<section>
 					<section>
-						<h1>Por Que Participar?</h1>
+						<h2>Por Que Participar?</h2>
 
 						<ul>
 							<li class="fragment">
@@ -155,13 +158,19 @@
 
 				<section>
 					<section>
-						<h1>Como Participar</h1>
+						<h3>Como Participar</h3>
+
+						<h2>Contribuir com código</h2>
+					</section>
+
+					<section>
+						<h3>Enviar Código</h3>
 
 						<p>Enviar código com novas features é a forma mais direta <span class="fragment">mas não a mais fácil.</span></p>
 					</section>
 
 					<section>
-						<h2>Enviar Código</h2>
+						<h3>Enviar Código</h3>
 
 						<ul>
 							<li>Aclimate-se ao ambiente do projeto <span class="fragment">(IRC, Maillist, Slack, etc)</span></li>
@@ -188,9 +197,11 @@
 					</section>
 
 					<section>
-						<h2>Enviar Código</h2>
+						<h3>Enviar Código</h3>
 
 						<p>Lembre-se: para alguém, o projeto é seu filho.</p>
+
+						<p class="fragment">"Puppy request"</p>
 
 						<p class="frament"><small>Anedota: IceWM.</small></p>
 
@@ -218,7 +229,7 @@
 					</section>
 
 					<section>
-						<h2>Enviar Código</h2>
+						<h3>Enviar Código</h3>
 
 						<p>Algumas vezes, o projeto já está abandonado pelo autor
 						original, mas a comunidade ainda mantém indiretamente.</p>
@@ -237,7 +248,7 @@
 					</section>
 
 					<section>
-						<h2>Enviar Código</h2>
+						<h3>Enviar Código</h3>
 
 						<p>
 							Muito raramente, o desenvolvedor simplesmente não tem tempo
@@ -276,13 +287,13 @@
 
 				<section>
 					<section>
-						<h1>Como Participar</h1>
+						<h3>Como Participar</h3>
 
-						<p>Bug reports</p>
+						<h2>Bug reports</h2>
 					</section>
 
 					<section>
-						<h2>Bug Reports</h2>
+						<h3>Bug Reports</h3>
 
 						<p>
 							Quando encontrar um problema, tente repetir; tente isolar
@@ -303,12 +314,17 @@
 					</section>
 
 					<section>
-						<h2>Bug Reports</h2>
+						<h3>Bug Reports</h3>
 
 						<p>
 							Se possível, crie um teste que mostre como o
 							problema se repete (o que é mais fácil para bibliotecas
 							e frameworks do que projetos).
+						</p>
+
+						<p class="fragment">
+							... ou, se não for programar, descreva
+							passo-a-passo como reproduzir o erro.
 						</p>
 
 						<p><small>Anedota: MongoEngine.</small></p>
@@ -332,7 +348,7 @@
 					</section>
 
 					<section>
-						<h2>O Fork</h2>
+						<h3>O Fork</h3>
 
 						<p>
 							Quando o desenvolvedor original do projeto não tem mais
@@ -344,7 +360,7 @@
 					</section>
 
 					<section>
-						<h2>O Fork</h2>
+						<h3>O Fork</h3>
 
 						<p>
 							... e há vezes que um fork, com ajuda da própria comunidade,
@@ -357,13 +373,13 @@
 
 				<section>
 					<section>
-						<h1>Como Participar</h1>
+						<h3>Como Participar</h3>
 
-						<p>Traduções</p>
+						<h2>Traduções</h2>
 					</section>
 
 					<section>
-						<h2>Traduções</h2>
+						<h3>Traduções</h3>
 
 						<p>Se você não entende de código, pode ajudar traduzindo
 						a aplicação para a sua língua.</p>
@@ -381,13 +397,13 @@
 
 				<section>
 					<section>
-						<h1>Como Participar</h1>
+						<h3>Como Participar</h3>
 
-						<p>Artwork</p>
+						<h2>Artwork</h2>
 					</section>
 
 					<section>
-						<h2>Artwork</h2>
+						<h3>Artwork</h3>
 
 						<p>
 							Muitos projetos precisam de um site bonito e até
@@ -402,13 +418,13 @@
 
 				<section>
 					<section>
-						<h1>Como Participar</h1>
+						<h3>Como Participar</h3>
 
-						<p>Documentação</p>
+						<h2>Documentação</h2>
 					</section>
 
 					<section>
-						<h2>Documentação</h2>
+						<h3>Documentação</h3>
 
 						<p>
 							Desde "como instalar esse projeto" ao "o que ele faz",
@@ -428,9 +444,9 @@
 
 				<section>
 					<section>
-						<h1>Como Participar</h1>
+						<h3>Como Participar</h3>
 
-						<p>Doações</p>
+						<h2>Doações</h2>
 					</section>
 
 					<section>
@@ -459,13 +475,13 @@
 
 				<section>
 					<section>
-						<h1>Como Participar</h1>
+						<h3>Como Participar</h3>
 
-						<p>Evangelização</p>
+						<h2>Evangelização</h2>
 					</section>
 
 					<section>
-						<h2>Evangelização</h2>
+						<h3>Evangelização</h3>
 
 						<p>
 							Você pode ajudar um projeto a crescer divulgando o mesmo
@@ -482,13 +498,13 @@
 
 				<section>
 					<section>
-						<h1>Como Participar</h1>
+						<h3>Como Participar</h3>
 
-						<p>"Obrigado"</p>
+						<h2>"Obrigado"</h2>
 					</section>
 
 					<section>
-						<h2>"Obrigado"</h2>
+						<h3>"Obrigado"</h3>
 
 						<p>Poucas coisas conseguem ser tão poderosas como um 
 						simples "obrigado por ter feito esse projeto".</p>
@@ -507,9 +523,8 @@
 
 						<div class="fragment semi-opaque">
 							<ul>
-								<li>@juliobiason</li>
 								<li>https://functional.cafe/@juliobiason</li>
-                                <li>julio.biason@gmail.com</li>
+                                <li>julio.biason@pm.me</li>
                                 <li><a href="http://presentations.juliobiason.net">http://presentations.juliobiason.net</a></li>
 							</ul>
 						</div>
