A few more words

--- a/porque-como-opensource.html
+++ b/porque-como-opensource.html
@@ -154,6 +154,14 @@
 							</li>
 						</ul>
 					</section>
+
+					<section>
+						<h2>Por que participar?</h2>
+
+						<p>
+							<a href="https://hbswk.hbs.edu/item/the-hidden-benefit-of-giving-back-to-open-source-software">The Hidden Benefit of Giving Back to Open Source Software</a>
+						</p>
+					</section>
 				</section>
 
 				<section>
@@ -514,6 +522,22 @@
 						</p>
 
 						<p class="fragment"><small>Anedota: Htop.</small></p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>"One more thing...</h2>
+
+						<p>
+							"I think that openness as a practice – not just
+							code you can fork but the transparency and
+							accessibility of the development process."
+						</p>
+
+						<p>
+							-- Mike Hoye, Mozilla
+						</p>
 					</section>
 				</section>
 
