--- a/porque-como-opensource.html
+++ b/porque-como-opensource.html
@@ -99,67 +99,73 @@
 
 				<section>
 					<section>
-						<h2>Por Que Participar?</h2>
+						<h3>Por Que Participar?</h3>
 
-						<ul>
-							<li class="fragment">
-								Aprender algo novo
+						<h2>Aprender algo novo</h2>
 
-								<aside class="notes">
-									O que a maior parte dos professores (principalmente) faz é sugerir 
-									participar de um projeto open source para aprender uma nova
-									linguagem.
-								</aside>
-							</li>
-
-							<li class="fragment">
-								Para retornar à comunidade
-
-								<aside class="notes">
-									Essa deve ser o "por que" mais citado: O software está
-									disponível para quem quiser usar e seria interessante
-									que quem utilize retorne algo ao desenvolvimento.
-								</aside>
-							</li>
-
-							<li class="fragment">
-								"Code rot"
-
-								<aside class="notes">
-									Software, com o tempo, se "deteriora". Se não tiver alguém
-									olhando, ele pára de funcionar.
-								</aside>
-							</li>
-
-							<li class="fragment">
-								"Scratch an itch"
-
-								<aside class="notes">
-									Se tem algo lhe incomodando no software, ele pode ser alterado.
-									E se você não se sentir capaz de fazer, ainda é possível pedir
-									pra alguém resolver isso pra você (e talvez você queria pagar
-									essa pessoa...)
-								</aside>
-							</li>
-
-							<li class="fragment">
-								Fator abandono.
-
-								<aside class="notes">
-									Software estável recebe poucas atualizações, mas as pessoas
-									tendem a ver software com poucas atualizações como "abandonado".
-									Alguém olhando, comentando, discutindo features, explicando
-									como fazer as coisas deixa o projeto "vivo".
-								</aside>
-							</li>
-						</ul>
+						<aside class="notes">
+							O que a maior parte dos professores (principalmente) faz é sugerir 
+							participar de um projeto open source para aprender uma nova
+							linguagem.
+						</aside>
 					</section>
 
 					<section>
-						<h2>Por que participar?</h2>
+						<h3>Por Que Participar?</h3>
+
+						<h2>Para retornar à comunidade</h2>
+
+						<aside class="notes">
+							Essa deve ser o "por que" mais citado: O software está
+							disponível para quem quiser usar e seria interessante
+							que quem utilize retorne algo ao desenvolvimento.
+						</aside>
+					</section>
+
+					<section>
+						<h3>Por Que Participar?</h3>
+
+						<h2>"Code rot"</h2>
+						
+						<aside class="notes">
+							Software, com o tempo, se "deteriora". Se não tiver alguém
+							olhando, ele pára de funcionar.
+						</aside>
+					</section>
+
+					<section>
+						<h3>Por Que Participar?</h3>
+
+						<h2>"Scratch an itch"</h2>
+
+						<aside class="notes">
+							Se tem algo lhe incomodando no software, ele pode ser alterado.
+							E se você não se sentir capaz de fazer, ainda é possível pedir
+							pra alguém resolver isso pra você (e talvez você queria pagar
+							essa pessoa...)
+						</aside>
+					</section>
+
+					<section>
+						<h3>Por Que Participar?</h3>
+
+						<h2>Fator abandono.</h2>
+						
+						<aside class="notes">
+							Software estável recebe poucas atualizações, mas as pessoas
+							tendem a ver software com poucas atualizações como "abandonado".
+							Alguém olhando, comentando, discutindo features, explicando
+							como fazer as coisas deixa o projeto "vivo".
+						</aside>
+					</section>
+
+					<section>
+						<h3>Por que participar?</h3>
 
 						<p>
-							<a href="https://hbswk.hbs.edu/item/the-hidden-benefit-of-giving-back-to-open-source-software">The Hidden Benefit of Giving Back to Open Source Software</a>
+							<a href="https://hbswk.hbs.edu/item/the-hidden-benefit-of-giving-back-to-open-source-software">
+								The Hidden Benefit of Giving Back to Open Source Software
+							</a>
 						</p>
 					</section>
 				</section>
@@ -209,8 +215,6 @@
 
 						<p>Lembre-se: para alguém, o projeto é seu filho.</p>
 
-						<p class="fragment">"Puppy request"</p>
-
 						<p class="frament"><small>Anedota: IceWM.</small></p>
 
 						<aside class="notes">
@@ -234,6 +238,16 @@
 							(Dica: o que eu usei pra achar onde estava a função foi
 							`grep`.)
 						</aside>
+					</section>
+
+					<section>
+						<h3>Enviar Código</h3>
+
+						<h2>PR = "Puppy Request"</h2>
+
+						<a href="https://www.youtube.com/watch?v=tzFWz5fiVKU&t=2970s">
+							Brett Cannon (Microsoft) - Setting expectations for Open Source participation
+						</a>
 					</section>
 
 					<section>
@@ -330,11 +344,6 @@
 							e frameworks do que projetos).
 						</p>
 
-						<p class="fragment">
-							... ou, se não for programar, descreva
-							passo-a-passo como reproduzir o erro.
-						</p>
-
 						<p><small>Anedota: MongoEngine.</small></p>
 
 						<aside class="notes">
@@ -353,6 +362,15 @@
 							"se esse é o comportamento esperado da biblioteca, como
 							podemos obter o resultado esperado do teste?"
 						</aside>
+					</section>
+
+					<section>
+						<h3>Bug Reports</h3>
+
+						<p>
+							Se não (quiser|saber) programar, descreva
+							passo-a-passo como reproduzir o erro.
+						</p>
 					</section>
 
 					<section>
@@ -527,8 +545,14 @@
 
 				<section>
 					<section>
-						<h2>"One more thing...</h2>
+						<h2>"One more thing..."</h2>
+					</section>
 
+					<section>
+						<img class="stretch" src="_images/community.jpg" alt="">
+					</section>
+
+					<section>
 						<p>
 							"I think that openness as a practice – not just
 							code you can fork but the transparency and
@@ -570,7 +594,7 @@
                 center: true,
                 // showNotes: true,
 
-                transition: 'slide', // none/fade/slide/convex/concave/zoom
+                transition: 'none', // none/fade/slide/convex/concave/zoom
 
                 // Optional reveal.js plugins
                 dependencies: [
